--- a/source/einleitung.adoc
+++ b/source/einleitung.adoc
@@ -13,7 +13,7 @@ Wir beide lieben so genannte Role-playing Games (RPG) und versuchten deshalb, di
 RPG's sind in den 80er und 90er Jahren gross geworden und prägten damals die Gaming Industrie.
 Wir sind beide Ende der 90er Jahre geboren und haben uns erst in unserer frühen Jugend mit Games befasst.
 Da wir deshalb viel Gaming Geschichte verpasst haben, betrachten wir in einem ersten Teil die Entwicklung der Videospiele, die Geschichten erzählen, von den Anfängen bis Heute.
-Zwietens versuchen wir mit einer Umfrage bei Spielern zu erfahren, wie diese zur Entwicklung der Story von Videospielen stehen.
+Zweitens versuchen wir mit einer Umfrage bei Spielern zu erfahren, wie diese zur Entwicklung der Story von Videospielen stehen.
 
 
 == Fragestellung & Hypothese
