--- a/source/Die Entstehung von Story in Videogames.adoc
+++ b/source/Die Entstehung von Story in Videogames.adoc
@@ -4,12 +4,12 @@
 == Dungeons and Dragons
 
 Ich denke fast jeder hat schonmal von "Dungeons and Dragons" gehört.
-Wir verbinden es oft mit jungen Nerds, die im Keller eingeschlossen mit ihren Freunden "Dungons und Dragons" spielen.
+Man verbinden es oft mit jungen Nerds, die im Keller eingeschlossen mit ihren Freunden "Dungeons und Dragons" spielen.
 Nun was ist den dieses "Dungeons and Dragons"?
 Es ist ein sogenanntes Pen and Paper Rollenspiel und wie der Name schon verät spielt man es mit Papier und Stift.
 Der Spieler schlüpft in eine fiktive Rolle und erlebt mit seinen Mitspielern verschiedenen Abenteuer.
 Der Spielleiter ist wie der Erzähler in einem Buch oder Film und die Spieler verkörpern die Charaktere.
-Nun anstatt das vorgegeben ist wie sich die Charaktere verhalten und was sie als nächstes tun, entscheiden die Spieler selber, was sie als nächstes machen.
+Anstatt das vorgegeben ist wie sich die Charaktere verhalten und was sie als nächstes tun, entscheiden die Spieler selber, was sie als nächstes machen.
 Man sieht klare Zusammenhänge zu heutigen Role-playing Games.
 Wie wir bereits erklärten wird der Spieler zum Gestalter der Geschichte und erlebt die Geschichte gleichzeitig mit.
 
@@ -17,35 +17,25 @@ Wie wir bereits erklärten wird der Spieler zum Gestalter der Geschichte und erl
 
 Die Wurzeln der RPG's stammen hauptsächlich aus den oben genannten Pen and Paper Rollenspielen.
 Jedoch übernimmt hier der Computer die Rolle des Spielleiters, welches natürlich Einschränkungen mit sich zieht.
-Hier ist es vorgeschrieben was passiert durch die Spielentwickler.
+Es ist vorgeschrieben was passiert, durch die Autoren und die Spielentwickler.
 Die ersten Computer Rollenspiele entstanden Mitte der 70er Jahre.
-Da Universitäten die einzigen Institutionen waren welche über eingeschränkt zugängige Rechner verfügten, waren es Studenten welche die ersten Rollenspiele entwickelten.
+Da Universitäten die einzigen Institutionen waren welche über eingeschränkt benutzbare Rechner verfügten, waren es Studenten welche die ersten Rollenspiele entwickelten.
 Speicherplatz war zu dieser Zeit sehr wertvoll, deshalb hatten Universitäten eine Strenge Löschplitik.
 Das heisst, dass fast alle zu dieser Zeit entwickelten Rollenspiele gelöscht wurden.
 Das älteste noch erhaltene Rollenspiel heisst "dnd" und wurde 1974 an der Universität Illinois entwickelt.
 Heute gibt es diese Rollenspiele immer noch, auch wenn das Genre nicht mehr so gross ist wie vor ein paar Jahren.
-Ein gutes Beispiel für ein Videospiel welches noch sehr klare Ändlichkeiten mit "Dungeons and Dragons" hat ist "Divinity: Orignial Sin 2", welches im Herbst 2017 erschienen ist.
+Ein gutes Beispiel für ein Videospiel welches noch sehr klare Änlichkeiten mit "Dungeons and Dragons" hat ist "Divinity: Orignial Sin 2", welches im Herbst 2017 erschienen ist.
 Im Spiel gibt es sogar eine Funktion ein Pen and Paper Spiel mit seinen Freunden zu spielen.
 Der Stift und das Papier ist zwar nicht vorhanden aber dennoch ist es fast identisch zu dem Orginal.
-Das gute ist man muss sich die Abenteuer nicht vorstellen, sondern man erlebt sie am Bildschirm mit.
-
-== Interactive Fiction
-
-Interactive Fiction, auch bekannt als Textadventures, ist ein Spielegenre, indem man nur mit Hilfe von Texten eine Geschichte erzählt.
-Das Gameplay besteht dabei im Aussuchen von Antworten oder selber etwas einzugeben.
-Es gibt einen jährlichen Wettbewerb in dem gute Textadventures mit aussergewöhnlichen Erzählweisen, ausgezeichnet werden.
-Bekannte Beispiele dafür sind zum Beispiel, das 1988 erschienene Game namens Corruption, in welchem man als Insider einen Kriminalfall lösen musste.
-Ein weiteres Beispiel wäre Galatea.
-In diesem Spiel muss man an einer Stelle mit der Statue einer Göttin sprechen und Infos aus ihr rausholen.
-Die Schwierigkeit dabei war, dafür zu sorgen, dass sie nicht gelangweilt wurde.
-Denn wäre dies der Fall, hätte sie nicht weiter mit einem geredet.
+Man muss sich die Abenteuer nicht vorstellen, sondern man erlebt sie am Bildschirm mit.
+Ob das gut oder schlecht ist kann jeder für sich selber entscheiden.
 
 == Adventure
 
 Adventures oder auch Abenteuerspiele sind Games, denen eine Story zu Grunde liegt und meist Einzelspieler Spiele sind.
 Oft ist es verbunden mit Erkundung und Rätseln.
 In gewissen Elementen kommt es dem RPG Genre sehr nahe.
-Anders als in den Textadventures steht hier das erzählen durch Grafik und Sound im Vordergrund.
+Anders als in den Textadventures steht hier das Erzählen durch Grafik und Sound im Vordergrund.
 Am Anfang war das noch schwarze Flächen mit ein paar Strichen.
 Heute hingegen kann man mit Grafik alleine sehr viel erzählen und es sieht auch sehr schön aus.
 
@@ -58,3 +48,14 @@ Im neuen Jahrtausend aber kamen die Adventures zurück auf die Bühne und feiern
 Nicht nur das, gewisse gelten sogar als Kultklassiker.
 So auch The Walking Dead von Telltale Games, dies  ist ein episodisches Spiel, welches eine packende und Herz zerreissende Geschichte erzählt.
 Der Spieler wird gezwungen schwere Entscheidungen zu treffen, die Charaktere das Leben kosten könnten.
+
+== Interactive Fiction
+
+Interactive Fiction, auch bekannt als Textadventures, ist ein Spielegenre, indem man nur mit Hilfe von Texten eine Geschichte erzählt.
+Das Gameplay besteht dabei im Aussuchen von Antworten oder selber etwas einzugeben.
+Es gibt einen jährlichen Wettbewerb in dem gute Textadventures mit aussergewöhnlichen Erzählweisen, ausgezeichnet werden.
+Bekannte Beispiele dafür sind zum Beispiel, das 1988 erschienene Spiel namens _Corruption_, in welchem man als Insider einen Kriminalfall lösen musste.
+Ein weiteres Beispiel wäre _Galatea_.
+In diesem Spiel muss man an einer Stelle mit der Statue einer Göttin sprechen und Infos aus ihr rausholen.
+Die Schwierigkeit dabei war, dafür zu sorgen, dass sie nicht gelangweilt wurde.
+Denn wäre dies der Fall, hätte sie nicht weiter mit einem geredet.
