--- a/source/Story in Videospielen.adoc
+++ b/source/Story in Videospielen.adoc
@@ -10,7 +10,7 @@ Seit tausenden von Jahren hat man Theaterstücke aufgeführt und Gedichte geschr
 Es ist die Geschicht, der den Menschen packt und interessiert.
 Schon Kinder lieben es Geschichten zu hören und daraus zu lernen.
 
-Im Buch "The Seven Basic Plots: Why We Tell Stories" von (<<Booker>>) schreibt er dass es sieben grundlegende Arten von Geschichten gibt auf die sich alle Geschichten zurückführen lassen.
+Im Buch "The Seven Basic Plots: Why We Tell Stories" von (<<Booker2004>>) schreibt er dass es sieben grundlegende Arten von Geschichten gibt auf die sich alle Geschichten zurückführen lassen.
 
 Das Monster überwinden:: Der Protagonist versucht eine meist böse Macht, die ihn bedroht, zu überwinden.
 
@@ -24,7 +24,7 @@ Komödie:: Leicht und humorvoller Charakter mit einem glücklichen oder lustigem
 
 Tragödie:: Der Protagonist ist ein Held mit einer offensichtlier Charakterschwäche oder einem grossen Fehler was am Ende zu seinem Untergang führt.
 
-Wiedergeburt:: Im Lauf der Geschichte zwingt ein Erignis den Protagonist seine Art zu ändern, was ihn oft zu einem besseren Menschen macht.
+Wiedergeburt:: Im Lauf der Geschichte zwingt ein Ereignis den Protagonist seine Art zu ändern, was ihn oft zu einem besseren Menschen macht.
 
 Auch in Videospielen sind diese Arten von Geschichten oft vertreten.
 Dabei tauchen am häufigsten das "Überwinden von Monstern" auf.
@@ -61,7 +61,7 @@ Es gibt auch Games die keine Story von einem Autor haben, sondern deren Geschich
 == Der Einfluss von Film
 
 Durch den technischen Fortschritt, vorallem im Bereich der Grafik, können Spiele immer näher an das visuelle Aussehen von Filmen kommen.
-Wie (<<Pöhnert>>) schreibt, wurden mit den immer besser werdenden technischen Gegebenheiten, immer längere und bessere spielfilmartige Sequenzen möglich.
+Wie (<<Pöhnert2005>>) schreibt, wurden mit den immer besser werdenden technischen Gegebenheiten, immer längere und bessere spielfilmartige Sequenzen möglich.
 Diese Sequenzen nennt man auch 'Cutscenes', welche zur Belohnung des Spielers und auch der Erzählung der Geschichte beitragen.
 
 Heute, 12 Jahre später, sind die technischen Möglichkeiten so weiterentwickelt, dass es möglich ist, quasi realistische Bilder im eigentlichem Spiel zu haben.
