--- a/source/Schlusswort.adoc
+++ b/source/Schlusswort.adoc
@@ -1,10 +1,15 @@
 = Schlusswort
 
-Uns ist klar, dass man mit einer kleinen Umfrage nicht alle Aspekte abdecken kann um diese Arbeit zu fundieren.
-Trotzdem decken wir mit dieser Arbeit einen Teil der Stimmen der Gaming-Community.
-Die Ergebnisse, die uns die Befragten Lieferten, bestätigten unsere These nicht.
-Die Leute wollen noch immer vertiefte Handlung und nicht nur einen oberflächlichen Onlinemodus.
-Unser Fazit lautet also, dass die Relevanz der Story in Videospielen in den letzten Jahren nicht abgenommen hat.
-Wir denken, dass auch in Zukunft die Industrie sich an Stories halten wird, zumindest wenn die Spieler weiterhin diese Einstellung behalten.
-In ein paar Jahren wird es auch mehr technische Mittel geben, die neue Features ermöglichen und so diesen Lauf beeinflussen könnten.
-So oder so sind wir uns einer guten Gaming-Zukunft sicher und haben Vertrauen in die Spielemacher.
+In unserer Arbeit konnten wir unsere Hypothese, dass die Storyline in Videospielen in den letzten 20 Jahren für die Konsumenten weniger wichtig geworden sind, nicht erhärten.
+Die Umfrage zeigte das die Geschichten in Videospielen immer noch ein wichtiges Thema für die Spieler ist.
+Der Wandel bei Videospielen liegt ganz klar im technischen Fortschritt.
+Die heutigen Spiele sind quasi interaktive Filme.
+Durch den Fortschitt der Grafik ist es für die Spielemacher möglich ein Spiel sehr Lebensnah zu gestallten.
+Ob die Geschichten nun besser sind als vor 20 Jahren ist schwer zu beurteilen, jedoch können wir mit sicherheit sagen das Geschichten in Videospielen auch in Zukunft noch eine wichtige Bedeutung haben werden .
+Wir haben durch die Arbeit gelernt wie Geschichten in Videospielen erzählt werden.
+Wir haben die Entwicklung der Videospielen vor unserer Zeit kennen gelernt.
+Zudem haben wir eine Umfrage gemacht und ausgewertet.
+Dieser erste Einblick brachte uns die Erkentnis das diese Materie weit komplexer ist als vermutet.
+In der Recherche lernten wir viele neue Spiele kennen.
+Wir haben gesehen das es Schwierig war aus unserer Umfrage relevante Aussagen zu generieren.
+In einer weiteren Arbeit würden wir uns mehr mit dem Design der Umfrage befassen.
