--- a/source/Abstract.adoc
+++ b/source/Abstract.adoc
@@ -1,10 +1,14 @@
 = Abstract
-In dieser Arbeit befassten wir uns mit der Relevanz der Story in Videospielen.
-Auf die Idee sind wir gekommen, weil wir beide seit Kindertagen Gamer sind.
-Wir stellten die These auf, dass die Story, also die Handlung, von Games immer mehr in den Hintergrund rückt und die Online Funktion wichtiger wird.
-Wir dachten uns, dass sowohl die Hersteller der Videospiele und vor allem die jüngeren Gamer dies bevorzugen.
-Um diese These zu untersuchen, haben wir eine Umfrage gemacht. An dieser Umfrage nahmen 120 Leute Teil, die alle in verschiedenen Alterskategorien eingeordnet wurden.
-Ebenfalls wollten wir mit dieser Arbeit denen, die sich nicht so mit der Thematik Videospiele auskennen, einen kleinen Einblick verschafften, indem wir ein wenig die Geschichte von Gaming erläuterten und ein paar Genres erklärten.
-Die Ergebnisse der Umfrage konnten die These nicht unterstützen, da ziemlich schnell klar wurde, dass die Befragten  immer noch eine durchdachte Handlung wollen und momentan damit zufrieden sind, wie es von den Herstellern gehandhabt wird.
-Wir waren von diesen Ergebnissen überrascht, da die meisten Spieler immer noch die Einzelspieler-Kampagnen gegenüber dem Onlinemodus bevorzugen.
-Somit kann vermutet werden, dass die Relevanz der Story in Games seit dem Millennium nicht gesunken ist.
+
+In dieser Arbeit befassten wir uns mit der Relevanz der Geschichten in Videospielen.
+Wir stellten die These auf, dass die Story, also die Handlung, von Videospielen immer mehr in den Hintergrund rückt.
+Unsere Fragsetllung war "Hat sich die Relevanz der Story-Line der Games in den letzten 20 Jahren verändert? "
+Der Zweck der Arbeit ist die Hypothese "Die Storyline von Videospielen ist in den letzten 20 Jahren für die Konsumenten weniger wichtig geworden" zu überprüfen.
+
+Um diese These zu untersuchen, machen wir eine Umfrage.
+Ebenfalls wollen wir mit dieser Arbeit denen, die sich nicht so mit der Thematik Videospiele auskennen, einen kleinen Einblick verschafften.
+Zusätzlich führen wir eine Literaturrecherche durch.
+
+Die Ergebnisse der Umfrage konnten die These nicht unterstützen.
+Die Spieler scheien grossen wert auf die Geschichten in Videospielen zu legen.
+Somit vermuten wir, dass die Relevanz der Geschichten in Videopsielen nicht gesunken ist.
